@@ -20,6 +20,7 @@ sub prepare_uploads {
         next if $key eq 'selected_hosts';
         next if $key eq 'selected_services';
         next if $key eq 'service';
+        next if $key =~ /^s\d+_op/mx;
         my $value = $c->request->{'parameters'}->{$key};
         if ( ref $value && ref $value ne 'ARRAY' ) {
             next;
