@@ -1146,7 +1146,7 @@ function add_new_filter(search_prefix, table) {
 
   // add first cell
   var typeselect        = document.createElement('select');
-  var options           = new Array('Search', 'Host', 'Service', 'Hostgroup', 'Servicegroup', 'Contact','Parent', 'Comment', 'Last Check', 'Next Check');
+  var options           = new Array('Search', 'Host', 'Service', 'Hostgroup', 'Servicegroup', 'Contact','Parent', 'Comment', 'Last Check', 'Next Check', 'Latency', 'Execution Time');
   typeselect.onchange   = verify_op;
   typeselect.setAttribute('name', search_prefix + 'type');
   typeselect.setAttribute('id', search_prefix + nr + '_ts');
@@ -1364,7 +1364,7 @@ function verify_op(event) {
     }
 
     if(curOp == '<=' || curOp == '>=') {
-      if(selValue != 'next check' && selValue != 'last check' ) {
+      if(selValue != 'next check' && selValue != 'last check' && selValue != 'latency' && selValue != 'execution time' ) {
         // is this currently selected?
         if(x == opElem.selectedIndex) {
           // only <= and >= are allowed for list searches
